--- a/_projects/registration_form/index.css
+++ b/_projects/registration_form/index.css
@@ -15,6 +15,16 @@ h2{
     color: blue;
 }
 
+select{
+    height: 50px;
+    width: 280px;
+    margin: 10px;
+    border-radius: 5px;
+    font-size: medium;
+    font-weight: 600;
+    padding-left: 10px;
+}
+
 .box-1{
    
     margin: 20px;
