added more table data

--- a/_projects/table/table.css
+++ b/_projects/table/table.css
@@ -28,7 +28,7 @@ table,td,th{
 
 
 th,td{
-    background-color: rgb(135, 201, 203);
+    /* background-color: rgb(135, 201, 203); */
     padding: 10px;
 }
 
