--- a/_projects/table/table.css
+++ b/_projects/table/table.css
@@ -3,9 +3,12 @@
     padding: 0%;
 }
 
+body{
+    margin: 50px
+}
+
 .container{
     padding: 10px;
-    
     
 }
 
@@ -16,8 +19,22 @@
 
 table{
     width: 100%;
-  
+    height: 700px;
+    position: relative;
 }
+
+/* .table-box{
+    height: 700px;
+} */
+/* .tbody{
+    height: 600px;
+    overflow-y: scroll;
+}
+
+thead{
+    position: fixed;
+    background-color: white;
+} */
 
 
 td{
@@ -39,8 +56,8 @@ th,td{
 
 .btn{
     margin: 5px;
-    height: 40px;
-    width: 80px;
+    height: 30px;
+    width: 50px;
     border: 1px solid;
     border-radius: 5px;
     text-align: center;
@@ -60,10 +77,16 @@ th,td{
     margin: 5px;
     align-content: center;
     text-align:center;
-    height: 40px;
-    width: 80px;
-    border: 1px solid blue;
+    height: 30px;
+    width: 50px;
+    border: 1px solid;
     border-radius: 5px;
+}
+
+.data-count{
+    margin-right: 100px;
+    align-self: center;
+    /* column-gap: 100px; */
 }
 
 
